--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 	<head>
-		<%- include('includes/head.ejs', { title: 'Calculadora IRPF - MEI' }) %>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="loremLorem" />
-		<link rel="stylesheet" href="styles/calculator.css" />
-		<script src="scripts/calculator.js" defer></script>
+		<title>Calculadora IRPF - MEI</title>
+		<!-- Fonts  -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<!-- Bootstrap  -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+			crossorigin="anonymous"
+		/>
+		<!-- Styles  -->
+		<link rel="stylesheet" href="/public/styles/base.css" />
+		<link rel="stylesheet" href="/public/styles/calculator.css" />
+		<script src="/public/scripts/calculator.js" defer></script>
 	</head>
 	<body>
-		<%- include('includes/header.ejs') %>
+		<header>
+			<nav class="navbar">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="/">
+						<img
+							src="/public/images/Circle-icons-calculator.svg"
+							alt=""
+							width="30"
+							height="24"
+							class="d-inline-block align-text-top"
+						/>
+						Calculadora IRPF - MEI
+					</a>
+				</div>
+			</nav>
+		</header>
 
 		<main>
 			<div class="border">
@@ -165,7 +199,7 @@
 						<p class="resultadosValue" id="lucro-tributável">R$ 0,00</p>
 					</div>
 
-					<div class="items azul">
+					<div class="items azul flex-column contador">
 						<h5 id="resultTitle">Declaração Anual do IRPF Não Obrigatória</h5>
 						<p id="resultText">
 							Atenção, o IRPF deve ser feito se você recebeu outros rendimentos como pessoa física e
@@ -173,9 +207,27 @@
 						</p>
 					</div>
 				</section>
+
+				<!-- Recomendação de Contador -->
+				<section class="container contador">
+					<h2>Contadores expecialistas em MEI</h2>
+
+					<div class="items contador">
+						<h5>Fulano de tal</h5>
+						<p>É bom!</p>
+					</div>
+				</section>
 			</div>
 		</main>
 
-		<%- include('includes/footer.ejs') %>
+		<footer>
+			<div>
+				<nav>
+					<a href="/contato">Contato</a> |
+					<a href="/privacidade">Política de Privacidade</a>
+				</nav>
+				<p>© Copyright 2022 - Calculadora IRPF-MEI</p>
+			</div>
+		</footer>
 	</body>
 </html>
