--- a/styles/base.css
+++ b/styles/base.css
@@ -14,19 +14,8 @@
 	--gray-700: hsl(210, 9%, 31%);
 	--gray-800: hsl(210, 10%, 23%);
 	--gray-900: hsl(210, 11%, 15%);
-	--success: hsl(152, 69%, 31%);
-	--info: hsl(190, 90%, 50%);
-	--warning: hsl(45, 100%, 51%);
-	--danger: hsl(354, 70%, 54%);
-	--gradient: linear-gradient(180deg, hsla(0, 0%, 100%, 0.15), hsla(0, 0%, 100%, 0));
-	--border-color: hsl(210, 14%, 89%);
-	--border-color-translucent: hsla(0, 0%, 0%, 0.175);
-	--border-radius: 0.375rem;
-	--border-radius-sm: 0.25rem;
-	--border-radius-lg: 0.5rem;
-	--border-radius-xl: 1rem;
-	--border-radius-2xl: 2rem;
-	--border-radius-pill: 50rem;
+	--green: hsl(152, 69%, 31%);
+	--red: hsl(354, 70%, 54%);
 	--link-color: #1567af;
 	--link-hover-color: #0c408c;
 }
