--- a/styles/calculator.css
+++ b/styles/calculator.css
@@ -26,7 +26,7 @@
 }
 
 .items {
-	margin: 18px 0;
+	margin: 22px 0;
 	border-radius: 20px;
 	border: 1px solid #62626217;
 	box-shadow: 2px 3px 25px 2px rgba(181, 181, 181, 0.403);
@@ -35,8 +35,7 @@
 .with-money-input {
 	display: grid;
 	grid-template-columns: 4fr 1fr;
-	grid-template-rows: 80px auto;
-	/* minmax(80px, auto) */
+	grid-template-rows: minmax(80px, auto) auto;
 	grid-template-areas:
 		'h i'
 		'c i';
@@ -47,7 +46,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 10px 3px 10px 15px;
 }
 
 .items p {
@@ -67,8 +65,11 @@ input[data-js='money'] {
 	border-radius: 0 20px 20px 0;
 	text-align: center;
 	padding: 0 10px 0 3px;
-	font-size: 1rem;
+	font-size: 1.6rem;
 	border: 1px solid #7c7c7c31;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .moneyInput:focus {
@@ -77,58 +78,97 @@ input[data-js='money'] {
 	box-shadow: 0 0 10px #9cbabaa4;
 }
 
-.resultados-value {
-	border-radius: 0 30px 30px 0;
-	text-align: center;
-
-	padding: 0 10px 0 10px;
-	margin-left: 5px;
-	font-size: 1rem;
-	border: 1px solid #7c7c7c31;
-	background-color: #98b5e3;
-}
-
 /* ------------- Background Color of Containers, Items and Input ------------- */
 
 /* --- Faturamento --- */
 
 .faturamento {
-	background-color: #f2ffeb;
+	background-color: #f4ffee;
 }
 
 .faturamento .items {
-	background-color: #d2f0c4;
+	background-color: #d5eec7;
 }
 
 .faturamento .items input {
-	background: #bde9ab;
+	background: #c0e7a9;
+}
+
+.faturamento .items input:focus,
+.faturamento .items input:hover {
+	background: #cdf3b5;
 }
 
 /* --- Despesas --- */
 
 .despesas {
-	background-color: #fff4f4;
+	background-color: #fff2f2;
 }
 
 .despesas .items {
-	background-color: #f2d4d4;
+	background-color: #f6d7d7;
 }
 
 .despesas .items input {
-	background: #e8c2c2;
+	background: #ebc3c3;
+}
+
+.despesas .items input:focus,
+.despesas .items input:hover {
+	background: #ffd0d0;
+}
+
+/* --- Resultado --- */
+
+.lucro {
+	background-color: #eef6fd;
+}
+
+.lucro .items {
+	background-color: #cde0ef;
+}
+
+.lucro .items .texto-conta {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.lucro .items .texto-conta p {
+	color: var(--gray-600);
+	font-size: 1.3rem;
+}
+
+.lucro .items .resultados-value {
+	padding: 7px;
+	font-size: 1.6rem;
+	border: 1px solid #7c7c7c31;
+	background-color: #c0daec;
+}
+
+.green {
+	color: var(--green);
+}
+
+.red {
+	color: var(--red);
+}
+
+#result-title {
+	text-decoration: underline;
 }
 
 /* --- Checkbox --- */
 
 .checkbox {
-	background-color: #f7efff;
+	background-color: #f7f2ff;
 }
 
 .checkbox .items .list {
 	padding: 15px;
 	border-radius: 20px 20px 0 0;
 	border: 1px solid #7c7c7c31;
-	background-color: #eadef6;
+	background-color: #e4daf6;
 }
 
 .list h4 {
@@ -138,44 +178,14 @@ input[data-js='money'] {
 }
 
 .checkbox .items .custom-radio {
-	padding: 18px 0px 18px 140px;
+	padding: 25px;
 	border-radius: 0 0 20px 20px;
 	border: 1px solid #7c7c7c31;
-	background-color: #d3bee8;
+	background-color: #d4c5f2;
 }
 
 .radio {
 	cursor: pointer;
-}
-
-/* --- Resultado --- */
-
-.lucro {
-	background-color: var(--gray-100);
-}
-
-.lucro .items {
-	background-color: var(--gray-300);
-}
-
-.lucro .items h4 {
-	padding-top: 13px;
-}
-
-.lucro .items .conta {
-	text-align: center;
-	margin-bottom: 10px;
-	font-size: 1.3rem;
-}
-
-.lucro .items .resultados-value {
-	margin-inline-start: 0;
-	text-align: center;
-	padding: 10px;
-	border-radius: 0 0 20px 20px;
-	font-size: 1.6rem;
-	border: 1px solid #7c7c7c31;
-	background-color: var(--gray-400);
 }
 
 /* --- Contador --- */
@@ -188,29 +198,47 @@ input[data-js='money'] {
 /* ------------- Accordion ------------- */
 
 .accordion-header {
+	display: grid;
+	grid-template-columns: 60px auto;
+	grid-template-areas: 'icon header';
 	cursor: pointer;
-	margin-bottom: -10px;
+	align-items: center;
+	padding: 6px;
 }
 
-.accordion-header::before {
-	content: '+';
-	font-size: 3.5rem;
-	margin-right: 15px;
+.despesas .items .accordion-header:hover {
+	background-color: #f9dede;
+	border-radius: 20px 0 0 20px;
 }
 
-.active-header::before {
-	content: '-';
+.lucro .items .accordion-header:hover {
+	background-color: #d4e8f7;
+	border-radius: 20px 0 0 20px;
+}
+
+.accordion-header h4 {
+	grid-area: header;
+}
+
+.accordion-icon {
+	grid-area: icon;
+	padding-left: 4px;
+	content: url(/images/expand_more_FILL0_wght400_GRAD200_opsz48.svg);
+}
+
+.accordion-icon .active-header {
+	content: url(/images/expand_less_FILL0_wght400_GRAD200_opsz48.svg);
 }
 
 .accordion-content {
 	margin-left: 25px;
 	margin-right: 20px;
-	margin-bottom: 10px;
+	/* margin-bottom: 10px; */
 
 	text-align: justify;
 	max-height: 0;
 	overflow: hidden;
-	transition: 1s ease max-height;
+	transition: 0.5s ease max-height;
 	font-size: 1.5rem;
 	color: var(--gray-700);
 }
@@ -218,13 +246,13 @@ input[data-js='money'] {
 /* ------------- Contato.html & Thanks.html ------------- */
 
 .contato {
-	background: hsla(209, 100%, 94%, 0.369);
+	background-color: #eef6fd;
 }
 
 .contato .items {
-	background: hsla(210, 35%, 82%, 0.672);
+	background-color: #cde0ef;
 	padding: 5px 25px 25px 25px;
-	margin-bottom: 0;
+	margin-bottom: 15px;
 	width: 400px;
 }
 
@@ -246,7 +274,7 @@ button {
 	border: none;
 	border-radius: 5px;
 	color: #777;
-	padding: 10px;
+	padding: 6px;
 	width: 100%;
 	resize: none;
 	overflow: auto;
@@ -268,4 +296,8 @@ button {
 .thanks {
 	text-align: center;
 	background: #d2f0c4;
+}
+
+.privacidade {
+	padding: 20px;
 }
